wifi: Introduce the configuration to disable/enable wifi firmware debugging.
Define config_wifi_enable_wifi_firmware_debugging parameters to set
disable/enable wifi firmware chip debugging.

CRs-Fixed: 2143753
Change-Id: If5a4fcecc92fbaddae5ee158d9523ba49c0c7165

--- a/overlay-go/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-go/frameworks/base/core/res/res/values/config.xml
@@ -46,4 +46,6 @@
        <item>"wigig0"</item>
        <item>"wlan0"</item>
    </string-array>
+
+   <bool translatable="false" name="config_wifi_enable_wifi_firmware_debugging">false</bool>
 </resources>
