wifi: Update WPA3 support overlay config for legacy devices
Set WPA3 support overlay config to false for unsupported legacy chipsets.

CRs-Fixed: 2452947
Change-Id: Id56f553b05346828186d5327a7fc57d99472f9da

--- a/overlay-go/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-go/frameworks/base/core/res/res/values/config.xml
@@ -48,4 +48,7 @@
    </string-array>
 
    <bool translatable="false" name="config_wifi_enable_wifi_firmware_debugging">false</bool>
+
+   <!-- Enable WPA3 support -->
+   <bool translatable="false" name="config_wifi_wpa3_supported">false</bool>
 </resources>
